src/test/deca/context/invalid/SansObjet/DeclVar-GE-string-int-int.deca
// Description:
//    Declaration of a string variable using >= operation between a int variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  5; 
    int y = 17; 
    string z = 5 >= 17; 
}
